# flexwin

./: Makefile.in  PAR_FILE  README  TODOs  configure  configure.ac  flexwin.f90  io_subs.f90  make_gfortran  make_intel  make_intel_caltech  maxima.f90  measure_windows_xcorr.f90  measurement_module.f90  seismo_subs.f90  select_windows_stalta2.f90  test2.f90  travel_times.f90  user_functions.f90  xcorr-measure.f90
USER_MANUAL/: AM-allcitations.bib  manual_introduction.tex  manual_other.tex  manual_technical.tex  manual_tuning.tex
docker/: Dockerfile  readme.md
qd_sac/: make_gfortran
qd_sac/hec/: .hec_fortran_wrapper.c.swp  .hilenv.c.swp
scripts/: extract_event_windowing_stats.sh  extract_event_windowing_stats_carl.sh  extract_event_windowing_stats_min.sh  pick_all_windows.pl  pick_all_windows_local.pl  plot_flexwin.py  plot_seismos_gmt.sh  plot_socal_ds.pl  plot_windows_all.pl  process_ds.py  write_flexwin_out.py  write_flexwin_shift_weight.py
test_data/: .gmtcommands4  .gmtdefaults4  PAR_FILE  extract_event_windowing_stats.sh  input.test  test2
test_data/MEASURE.orig/: ABKT.II.LHZ.env.syn  ABKT.II.LHZ.obs  ABKT.II.LHZ.obs_lp.sac  ABKT.II.LHZ.stalta  ABKT.II.LHZ.syn
ttimes_mod/: Makefile  README  make_gfortran
user_files/global_3D/: PAR_FILE.030-070  PAR_FILE.030-090  PAR_FILE.050-150  user_functions.f90
user_files/socal_3D/: PAR_FILE_T002_Daniel  PAR_FILE_T002_T030_m08  PAR_FILE_T002_T030_m08_orig  PAR_FILE_T002_T030_m09  PAR_FILE_T002_T030_m10  PAR_FILE_T002_T030_m11  PAR_FILE_T002_T040_Daniel  PAR_FILE_T002_T040_m00  PAR_FILE_T002_T040_m00_orig  (+35 more)
(+13 files in other folders)
