dnl                                               -*- Autoconf -*-
dnl
dnl Process this file with autoconf to produce the 'configure' script:
dnl
dnl % autoreconf -if
dnl
dnl You must have recent versions of Autoconf and Automake installed.

# $Id: configure.ac,v 1.1 2005/08/24 22:45:51 leif Exp $


AC_PREREQ(2.61)
AC_INIT([flexwin], [1.0], [cig-seismo@geodynamics.org])
AC_CONFIG_SRCDIR([test2.f90])


# Checks for programs.

AC_PROG_FC
AC_LANG(Fortran)
AC_FC_SRCEXT(f90)
AC_FC_FREEFORM()



# Checks for libraries.


# Checks for header files.


# Checks for typedefs, structures, and compiler characteristics.


# Checks for library functions.


AC_CONFIG_FILES([Makefile])
AC_OUTPUT


dnl end of configure.ac
